Update Query.java